@@ -196,6 +196,7 @@ void OPCALL normal_int99(CPU* cpu, DecodedOp* op) {
     START_OP(cpu, op);
     U32 index = cpu->peek32(0);
     if (index<int99CallbackSize && int99Callback[index]) {
+        lastGlCallTime = getMilliesSinceStart();
         int99Callback[index](cpu);
     } else {
         kpanic("Uknown int 99 call: %d", index);
